[package]
name = "helm_to_oci"
version = "0.1.0"
edition = "2021"
publish = ["afo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
flate2 = { version = "1.0.24", features = ["zlib"], default-features = false }
ocidir = "0.2.1"
serde_json = "1.0.105"
serde_yml = "0.0.7"
tar = "0.4.38"
