[package]
name = "helm_to_oci"
version = "0.1.0"
edition = "2021"
publish = ["afo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
flate2 = { version = "1.0.24", features = ["zlib"], default-features = false }
log = "0.4.19"
oci-spec = { version = "0.6.3", features = ["image"], default-features = false }
openssl = "0.10.63"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yml = "0.0.7"
tar = "0.4.38"
tempfile = "3.8.0"
termcolor = "1.1.3"
